# renderpy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
src/: pybind.cpp  render.h  voxelize_scans_with_mask.cpp
src/mesh_utils/: mesh.cpp  mesh.h  semantic_mesh.h
src/opengl/: egl.cpp  egl.h  opengl.cpp  opengl.h  opengl_semantic.h
src/opt/: camera.h  evaluate.cpp  evaluate.h  image.h  multi_scale_mesh.h  optimizer.cpp  optimizer.h
